--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,9 @@
 
 @import "tailwindcss/utilities";
 
+@import url('https://fonts.googleapis.com/css2?family=Itim&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
+
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -16,15 +19,11 @@
 .text-outline-thin {
   text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
 }
-.rotate-card:hover {
-  transform: rotateY(180deg);
+
+.nunito {
+  font-family: 'Nunito', sans-serif;
 }
-.preserve-3d {
-  transform-style: preserve-3d;
-}
-.perspective {
-  perspective: 1000px;
-}
-.back-face-hidden {
-  backface-visibility: hidden;
+
+.nunito-font-class-body {
+  @apply text-lg nunito;
 }
